[package]
name = "tproxy-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"
tokio = {version = "1.36", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = "0.2.0"
regex = { version = "1", features = ["unicode-case"] }
socket2 = "0.5.8"
clap = { version = "4.5", features = ["derive"] }
unix-udp-sock = { git = "https://github.com/Watfaq/unix-udp-sock.git", rev = "847c80b519" }
socket2-ext = { version = "0.1" }